Changed some waybar button icons sizes and fixing hyprland window gaps

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -21,10 +21,10 @@ button:hover {
   border-left: 2px solid #ffffff;
   border-bottom: 2px solid #ffffff;
   border-top: 2px solid #ffffff;
-  font-size: 20px;
+  font-size: 24px;
   color: #ffffff;
   transition: all 0.3s ease-out;
-  padding: 0px 13px 0px 12px;
+  padding: 0px 6px 0px 12px;
   background-color: #000000;
 }
 
@@ -32,9 +32,9 @@ button:hover {
   border-right: 2px solid #ffffff;
   border-bottom: 2px solid #ffffff;
   border-top: 2px solid #ffffff;
-  font-size: 25px;
+  font-size: 28px;
   background-color: #000000;
-  padding: 0px 15px 0px 14px;
+  padding: 0px 12px 0px 6px;
 }
 
 #custom-reboot {
